# CGNPU

./: .gitignore  CMakeLists.txt  HeterogeneousMatrixMultiplication  README.MD  build.sh  main.cpp
compiler/: .gitignore  CMakeLists.txt
compiler/common/: CMakeLists.txt
compiler/common/src/: bytecode_format.cpp  bytecode_format.h  instruction_set.cpp  instruction_set.h  matrix_utils.cpp  matrix_utils.h  metal_buffer_wrapper.h  metal_buffer_wrapper.mm
compiler/compiler/: CMakeLists.txt
compiler/compiler/src/: bytecode_generator.cpp  bytecode_generator.h  ir_generator.cpp  ir_generator.h  main.cpp  parser.cpp  parser.h
compiler/programs/matrix_mult/: CMakeLists.txt  main.cpp
compiler/programs/test_inputs/: example_matrix_input.txt  identity_matrix_input.txt  medium_matrix_input.txt
compiler/programs/test_outputs/: medium_matrix_output.txt
compiler/runtime/: CMakeLists.txt
compiler/runtime/coreml/: coreml_model_builder.mm
compiler/runtime/metal/: matrix_mult.metal
compiler/runtime/src/: ane_executor.cpp  ane_executor.h  cpu_executor.cpp  cpu_executor.h  device_manager.cpp  device_manager.h  gpu_executor.h  gpu_executor.mm  main.cpp  profiler.cpp  profiler.h  runtime.cpp  runtime.h  work_stealing.cpp  work_stealing.h
compiler/scripts/: build.sh  generate_large_matrix.py  run_example.sh
